kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-server
  labels:
    app: remote-server
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: remote-server
  template:
    metadata:
      labels:
        app: remote-server
    spec:
      containers:
      - name: remote-server
        image: docker.io/alexeysidorov/remote-server-image:1.0.4
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        ports:
        - containerPort: 8082
        readinessProbe:
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: /
            port: 8082
          periodSeconds: 15
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: /
            port: 8082
          periodSeconds: 15
          timeoutSeconds: 10
          initialDelaySeconds: 10
        startupProbe:
          failureThreshold: 3
          successThreshold: 1
          httpGet:
            path: /
            port: 8082
          periodSeconds: 15
          timeoutSeconds: 10
...
